crates/psqs/src/program/molpro/snapshots/psqs__program__molpro__tests__write_input__Spt_Opt.snap
---
source: crates/psqs/src/program/molpro/tests.rs
expression: "read_to_string(dir.path().with_extension(\"inp\")).unwrap()"
---
memory,1,g

gthresh,energy=1.d-12,zero=1.d-22,oneint=1.d-22,twoint=1.d-22;
gthresh,optgrad=1.d-8,optstep=1.d-8;
nocompress;

geometry={
C
C 1 CC
C 1 CC 2 CCC
H 2 CH 1 HCC 3 180.0
H 3 CH 1 HCC 2 180.0

}
CC =                  1.42101898
CCC =                55.60133141
CH =                  1.07692776
HCC =               147.81488230

basis={
default,cc-pVTZ-f12
}
set,charge=0
set,spin=0
hf,accuracy=16,energy=1.0d-10
{CCSD(T)-F12,thrden=1.0d-8,thrvar=1.0d-10}
{optg,grms=1.d-8,srms=1.d-8}
